--- a/index.html
+++ b/index.html
@@ -1,36 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samrat Kumar – Formal Verification Engineer</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Hello 👋, I'm Samrat Kumar Das</title>
 </head>
 <body>
-    <header>
-        <h1>👨‍💻 Samrat Kumar</h1>
-        <p>Senior Formal Verification Engineer | 9+ Yrs in CDC, Lint, SVA</p>
-    </header>
+  <h1>Hello 👋, I'm Samrat Kumar Das</h1>
+  <p>Senior Application Engineer at <strong>Synopsys</strong> with 9+ years of expertise in <strong>Formal Verification Methodologies</strong>, <strong>CDC/RDC</strong>, and <strong>Lint</strong>.</p>
 
-    <section>
-        <h2>📁 Featured Projects</h2>
-        <ul>
-            <li><a href="https://github.com/Sam969696/formal-verification-designs" target="_blank">Formal Verification Design Suite</a></li>
-        </ul>
-    </section>
+  <p>🧠 Exploring Formal-First Design Methodology</p>
 
-    <section>
-        <h2>🧠 Skills</h2>
-        <p>SystemVerilog · SVA · VC Formal · CDC · JasperGold · RTL Lint · UVM · DPV</p>
-    </section>
+  <h2>📂 Featured Projects</h2>
+  <ul>
+    <li><a href="https://github.com/Sam969696/formal-verification-designs">Formal Verification Design Portfolio</a></li>
+  </ul>
 
-    <section>
-        <h2>📄 Resume</h2>
-        <p><a href="mailto:vlsi.samrat@gmail.com">📧 Email me to request resume</a></p>
-    </section>
-
-    <footer>
-        <p>🌐 <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a> · <a href="https://github.com/Sam969696">GitHub</a></p>
-    </footer>
+  <h2>📬 Contact</h2>
+  <p>Email: vlsi.samrat@gmail.com</p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/samrat-das-094745b7" target="_blank">samrat-das-094745b7</a></p>
 </body>
 </html>
